--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,7 @@
 
 # Core Framework
 Flask==3.1.0
-Werkzeug==3.0.1
+Werkzeug==3.1
 
 # Database
 Flask-SQLAlchemy==3.1.1
@@ -28,3 +28,4 @@ pytest-flask==1.3.0
 black==23.12.1
 flake8==7.0.0
 PyMySQL
+flask_migrate
