--- a/requirements.txt
+++ b/requirements.txt
@@ -18,6 +18,7 @@ email-validator==2.1.0.post1
 # Security
 python-dotenv==1.0.0
 bcrypt==4.1.2
+cryptography
 
 # Date/Time Handling
 python-dateutil==2.8.2
